# char_training

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  bake_templates.py  batch_ocr.html  blindocr.js  core.js  launch.py  ocr.js  package-lock.json  package.json  reader.js  test.js  training.css  training.html  training.js
bench/: .gitignore  README.md  adopt-ocr-rows.mjs  blind-read.mjs  compare-dump.mjs  dedupe_pngs.py  dump-layout.mjs  dump-ocr.mjs  fix-spaces.mjs  guess-letter.mjs  measure-anchor.mjs  measure-metrics.mjs  measure-spaces.mjs  merge-templates.mjs  ocr-bench.mjs  package-lock.json  package.json  paths.mjs  prune-templates.mjs  raster-cache-browser.js  raster-cache.mjs  rasterize.mjs  recreate.mjs  synth-templates.mjs  test-blind-app.mjs  trace-templates.mjs  ttf.mjs
char_training/: DOCUMENTATION.md  README.md  bake_templates.py  launch.py  page1_ocr.html  pdf_to_png.html  training.html
corpus/: big.txt  courier_1.txt  courier_2.txt  email.txt  v3.txt
docs/: BLIND_READER.md  EMAIL_VRULE_PROMPT.md  MISSING_LETTER.md  MISSING_LETTER_PROMPT.md  README.md  RENDERER_HUNT_NOTES.md  RENDERER_IDENTIFIED.md  REPORT_RENDERER_HUNT.md  SYNTHETIC_DICT.md
notes/: BLIND_READER.md  EMAIL_VRULE_PROMPT.md  MISSING_LETTER.md  (+7 more)
ocr/gpu-ocr/: .gitignore  BENCHMARK.md  CMakeLists.txt  README.md  bench-baseline.json  build.ps1  sample-composition-42.jsonl
ocr/gpu-ocr/src/: assemble.cpp  assemble.hpp  main.cpp  match.cu  match.cuh  pgm.hpp  tpl.hpp
ocr/gpu-ocr/tools/: bench.mjs  classify-sample.mjs  classify.mjs  compare.mjs  export-pages.mjs  export-templates.mjs
(+361 files in other folders)
